--- a/usr.bin/uucp/libuu/Makefile
+++ b/usr.bin/uucp/libuu/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.1 (Berkeley) 03/02/91
+#	@(#)Makefile	5.2 (Berkeley) 03/21/91
 
 LIB=	uu
 CFLAGS+=-I${.CURDIR}/../includes
@@ -6,5 +6,7 @@ SRCS=	anlwrk.c anyread.c cfgets.c chkpth.c cpmv.c expfile.c gename.c \
 	getargs.c getprm.c getpwinfo.c gnxseq.c lastpart.c logent.c \
 	mailst.c prefix.c setline.c subdir.c sysacct.c systat.c ulockf.c \
 	uucpdefs.c uucpname.c versys.c xqt.c
+
+install:
 
 .include <bsd.lib.mk>
