--- a/lib/csu/i386/Makefile
+++ b/lib/csu/i386/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/14/90
+#	@(#)Makefile	5.4 (Berkeley) 03/21/91
 
 CFLAGS=	-O -DLIBC_SCCS
 OBJS=	crt0.o
@@ -23,3 +23,5 @@ cleandir clean:
 	rm -f ${OBJS} gmon.o mon.o moncrt0.o core a.out x.s x.o crt0.s
 
 depend lint tags:
+
+.include <bsd.prog.mk>
