--- a/share/man/man8/man8.vax/Makefile
+++ b/share/man/man8/man8.vax/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	5.4 (Berkeley) 05/11/90
+#	@(#)Makefile	5.5 (Berkeley) 03/22/91
 
-MAN8=	crash.0 drtest.0 format.0 installboot.0
+MAN8=	MAKEDEV.0 crash.0 drtest.0 format.0 installboot.0
 MANSUBDIR=/vax
 
 all: ${MAN8}
