--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -1,16 +1,6 @@
-#	@(#)Makefile	5.6.1.1 (Berkeley) 10/21/90
+#	@(#)Makefile	5.7 (Berkeley) 04/01/91
 
-SUBDIR=	bugfiler comsat delivermail fingerd ftpd getNAME getty makekey \
-	rexecd rlogind rshd talkd telnetd tftpd uucpd
-
-#KERBEROS=kpasswdd
-
-.if   ${MACHINE} == "hp300"
-SUBDIR+=gcc
-.elif ${MACHINE} == "tahoe"
-SUBDIR+=pcc
-.elif ${MACHINE} == "vax"
-SUBDIR+=pcc
-.endif
+SUBDIR=	bugfiler comsat fingerd ftpd getNAME getty kpasswdd mail.local \
+	makekey rexecd rlogind rshd talkd telnetd tftpd uucpd
 
 .include <bsd.subdir.mk>
