--- a/bin/cp/Makefile
+++ b/bin/cp/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.3 (Berkeley) 04/03/91
 
 PROG=	cp
+SRCS=	cp.c path.c
 
 .include <bsd.prog.mk>
