--- a/old/pcc/Makefile
+++ b/old/pcc/Makefile
@@ -1,9 +1,12 @@
-#	@(#)Makefile	5.2 (Berkeley) 02/28/91
+#	@(#)Makefile	5.3 (Berkeley) 04/03/91
 
 .if	(${MACHINE} == "tahoe")
 SUBDIR=	c2 cc ccom f1
 .elif	(${MACHINE} == "vax")
 SUBDIR=	c2 cc ccom f1 sccom
 .endif
+
+afterinstall:
+	install -c -o ${BINOWN} -g ${BINGRP} -m 444 pcc.h /usr/include
 
 .include <bsd.subdir.mk>
