--- a/usr.bin/cksum/Makefile
+++ b/usr.bin/cksum/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	5.2 (Berkeley) 04/01/91
+#	@(#)Makefile	5.3 (Berkeley) 04/04/91
 
 PROG=	cksum
-SRCS=	cksum.c crc.c
+SRCS=	cksum.c crc.c print.c sum1.c sum2.c
 
 .include <bsd.prog.mk>
