--- a/old/rxformat/Makefile
+++ b/old/rxformat/Makefile
@@ -1,7 +1,8 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 04/11/91
 
 PROG=	rxformat
 MAN8=	rxformat.0
+CFLAGS+=-I/sys
 MANSUBDIR=/vax
 
 .include <bsd.prog.mk>
