--- a/usr.bin/lock/Makefile
+++ b/usr.bin/lock/Makefile
@@ -1,5 +1,7 @@
-#	@(#)Makefile	5.4 (Berkeley) 05/11/90
+#	@(#)Makefile	5.5 (Berkeley) 04/16/91
 
 PROG=	lock
+BINOWN= root
+BINMODE=4555
 
 .include <bsd.prog.mk>
