--- a/old/refer/USD.doc/refer/Makefile
+++ b/old/refer/USD.doc/refer/Makefile
@@ -1,10 +1,11 @@
-#	@(#)Makefile	6.2 (Berkeley) 06/30/90
+#	@(#)Makefile	6.3 (Berkeley) 04/17/91
 
 # refer.mac should be typed on a 12 pitch Daisy wheel printer
 DIR=	usd/29.refer
 SRCS=	refer.bib
 MACROS=	-msU
 REFER=	refer -p biblio
+CLEANFILES=biblio.ig
 
 paper.${PRINTER}: ${SRCS}
 	${REFER} ${SRCS} | ${ROFF} > ${.TARGET}
