--- a/bin/ps/Makefile
+++ b/bin/ps/Makefile
@@ -1,7 +1,8 @@
-#	@(#)Makefile	5.4 (Berkeley) 02/08/91
+#	@(#)Makefile	5.5 (Berkeley) 04/23/91
 
 PROG=	ps
 SRCS=	devname.c keyword.c nlist.c print.c ps.c
+CFLAGS+=-I/sys
 DPADD=	${LIBMATH} ${LIBUTIL}
 LDADD=	-lm -lutil
 BINGRP=	kmem
