--- a/usr.bin/gcore/Makefile
+++ b/usr.bin/gcore/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/11/90
+#	@(#)Makefile	5.4 (Berkeley) 04/27/91
 
 PROG=	gcore
+CFLAGS+=-I/sys
 
 .include <bsd.prog.mk>
