--- a/usr.bin/ld/Makefile
+++ b/usr.bin/ld/Makefile
@@ -1,8 +1,7 @@
-#	@(#)Makefile	6.1 (Berkeley) 02/07/91
+#	@(#)Makefile	6.2 (Berkeley) 04/30/91
 
-PROG=		ld++
-BINDIR=		/usr/libexec
-SRCS=		ld++.c cplus-dem.c
-NOMAN=		noman
+PROG=	ld
+SRCS=	ld.c cplus-dem.c
+NOMAN=	noman
 
 .include <bsd.prog.mk>
