--- a/old/sh/Makefile
+++ b/old/sh/Makefile
@@ -1,11 +1,11 @@
-#	@(#)Makefile	4.12 (Berkeley) 05/11/90
+#	@(#)Makefile	4.13 (Berkeley) 04/30/91
 
 PROG=	sh
 CFLAGS+=-w
 SRCS=	setbrk.c builtin.c blok.c stak.c cmd.c fault.c main.c word.c \
 	string.c name.c args.c xec.c service.c error.c io.c print.c \
 	macro.c expand.c ctype.c msg.c
-MAN1=	cd.0 intro.0 sh.0 wait.0
+MAN1=	cd.0 sh.0 wait.0
 DPADD=	${LIBCOMPAT}
 LDADD=	-lcompat
 MLINKS=	sh.1 case.1 sh.1 for.1 sh.1 if.1 sh.1 while.1
