--- a/bin/stty/Makefile
+++ b/bin/stty/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/11/90
+#	@(#)Makefile	5.3 (Berkeley) 05/02/91
 
 PROG=	stty
+SRCS=	cchar.c gfmt.c modes.c print.c stty.c util.c
 
 .include <bsd.prog.mk>
