--- a/games/fortune/datfiles/Makefile
+++ b/games/fortune/datfiles/Makefile
@@ -1,6 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 04/27/91
+#	@(#)Makefile	5.2 (Berkeley) 05/06/91
 
 DATFILES=fortunes.dat startrek.dat zippy.dat fortunes-o.dat
+CLEANFILES+=${DATFILES}
 
 install: ${DATFILES}
 	(cd ${.CURDIR} && install -c -o ${BINOWN} -g ${BINGRP} -m 444 \
