--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,14 +1,8 @@
-#	@(#)Makefile	5.25 (Berkeley) 04/30/91
+#	@(#)Makefile	5.25.1.1 (Berkeley) 05/07/91
 
-SUBDIR=	libc libcurses libcompat libdbm libm libmp libplot \
+# Missing: libcompat libdbm libmp libplot
+
+SUBDIR=	csu.${MACHINE} libc libcurses libm \
 	libresolv librpc/rpc libterm libutil liby
-
-.if	${MACHINE} == "tahoe"
-SUBDIR+=csu.tahoe.pcc
-.elif	${MACHINE} == "vax"
-SUBDIR+=csu.vax.pcc
-.else
-SUBDIR+=csu.${MACHINE}
-.endif
 
 .include <bsd.subdir.mk>
