--- a/share/doc/Makefile
+++ b/share/doc/Makefile
@@ -1,8 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 06/30/90
+#	@(#)Makefile	5.1.1.1 (Berkeley) 05/07/91
 
-# papers doesn't get distributed
-# index, iso, and ucs aren't done yet
-SUBDIR=	ps1 ps2 smm usd
+#Missing: index iso papers ps2 ucs
+SUBDIR=	ps1 smm usd
 
 all depend lint tags:
 
