--- a/usr.bin/m4/Makefile
+++ b/usr.bin/m4/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	5.7 (Berkeley) 05/11/90
+#	@(#)Makefile	5.7.1.1 (Berkeley) 05/08/91
 #
 #	-DEXTENDED 
 #		if you want the paste & spaste macros.
@@ -6,5 +6,6 @@
 PROG=	m4
 CFLAGS+=-DEXTENDED
 SRCS =  main.c eval.c serv.c look.c misc.c expr.c
+NOMAN=	noman
 
 .include <bsd.prog.mk>
