--- a/sys/i386/floppy/Makefile
+++ b/sys/i386/floppy/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/03/91
+#	@(#)Makefile	5.2 (Berkeley) 05/09/91
 
-SUBDIR=	arp bad144 cat cp dd disklabel dump echo ed fsck ftp ifconfig \
+SUBDIR=	arp bad144 cat cp dd disklabel dump ed fsck ftp ifconfig \
 	init ls mkdir mknod mount mv netstat newfs ping restore rlogin \
 	rm route rsh sh slattach stty sync tar telnet umount
 
