--- a/sys/i386/floppy/mount/Makefile
+++ b/sys/i386/floppy/mount/Makefile
@@ -1,12 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/03/91
+#	@(#)Makefile	5.2 (Berkeley) 05/09/91
 
 PROG=	mount
-SRCS=	mount.c
-CFLAGS+=-DLETS_GET_SMALL -DNFS
+CFLAGS+=-s -N -I${.CURDIR}/../cat
 NOMAN=	noman
-DPADD=	${LIBRPC}
-LDADD=	-lrpc
-LDFLAGS=-N
-.PATH:	${.CURDIR}/../../../../sbin/mount
 
 .include <bsd.prog.mk>
