--- a/sys/i386/floppy/Makefile
+++ b/sys/i386/floppy/Makefile
@@ -1,8 +1,13 @@
-#	@(#)Makefile	5.2 (Berkeley) 05/09/91
+#	@(#)Makefile	5.3 (Berkeley) 05/10/91
 
 SUBDIR=	arp bad144 cat cp dd disklabel dump ed fsck ftp ifconfig \
 	init ls mkdir mknod mount mv netstat newfs ping restore rlogin \
 	rm route rsh sh slattach stty sync tar telnet umount
+
+install:
+	for i in ${SUBDIR}; do \
+		mv $$i/obj/$$i bin/$$i \
+	done
 
 .include <bsd.subdir.mk>
 
