--- a/sys/i386/floppy/umount/Makefile
+++ b/sys/i386/floppy/umount/Makefile
@@ -1,12 +1,7 @@
-#	@(#)Makefile	5.1 (Berkeley) 05/03/91
+#	@(#)Makefile	5.2 (Berkeley) 05/10/91
 
 PROG=	umount
-SRCS=	umount.c
-CFLAGS+=-DLETS_GET_SMALL
-DPADD=	${LIBRPC}
-LDADD=	-lrpc
+CFLAGS+=-s -N -I${.CURDIR}/../cat
 NOMAN=	noman
-LDFLAGS=-N
-.PATH:	${.CURDIR}/../../../../sbin/umount
 
 .include <bsd.prog.mk>
