--- a/sys/i386/floppy/Makefile
+++ b/sys/i386/floppy/Makefile
@@ -1,8 +1,12 @@
-#	@(#)Makefile	5.3 (Berkeley) 05/10/91
+#	@(#)Makefile	5.4 (Berkeley) 05/10/91
 
 SUBDIR=	arp bad144 cat cp dd disklabel dump ed fsck ftp ifconfig \
 	init ls mkdir mknod mount mv netstat newfs ping restore rlogin \
 	rm route rsh sh slattach stty sync tar telnet umount
+
+.if make(clean) || make(cleandir)
+SUBDIR+=bin
+.endif
 
 install:
 	for i in ${SUBDIR}; do \
