--- a/sys/i386/floppy/Makefile
+++ b/sys/i386/floppy/Makefile
@@ -1,7 +1,7 @@
-#	@(#)Makefile	5.5 (Berkeley) 05/10/91
+#	@(#)Makefile	5.6 (Berkeley) 05/20/91
 
 SUBDIR=	arp bad144 cat cp dd disklabel dump ed fsck ftp ifconfig \
-	init ls mkdir mknod mount mv netstat newfs ping restore rlogin \
+	init ls mkdir mknod mount mv netstat newfs ping restore \
 	rm route rsh sh slattach stty sync tar telnet umount
 
 .if make(clean) || make(cleandir)
