--- a/etc/etc.tahoe/fstab.example
+++ b/etc/etc.tahoe/fstab.example
@@ -1,8 +1,8 @@
-#	@(#)fstab.example	5.1 (Berkeley) 05/21/91
-
-# The following is for the brain-dead console processor on the
-# Tahoe machines.
 /dev/xfd0a:/: /	ufs	xx 1 1
+# The previous is for the brain-dead console processor on the
+# Tahoe machines.  Make sure it's the first line, just in case.
+
+#	@(#)fstab.example	5.2 (Berkeley) 05/21/91
 
 /dev/dk0a /			ufs	rw 1 1
 /dev/dk0b none			swap	sw 0 0
