--- a/usr.bin/systat/Makefile
+++ b/usr.bin/systat/Makefile
@@ -1,9 +1,10 @@
-#	@(#)Makefile	5.9 (Berkeley) 03/04/91
+#	@(#)Makefile	5.10 (Berkeley) 06/04/91
 
 PROG=	systat
 CFLAGS+=-I/sys
 SRCS=	cmds.c cmdtab.c disks.c fetch.c iostat.c keyboard.c vmstat.c main.c \
-	mbufs.c netcmds.c netstat.c pigs.c swap.c
+	mbufs.c netcmds.c netstat.c pigs.c swap.c devname.c
+.PATH:	${.CURDIR}/../../bin/ps
 LDADD=	-lcurses -ltermcap -lm -lutil -lcompat
 DPADD=	${LIBCURSES} ${LIBTERMCAP} ${LIBM} ${LIBUTIL}
 BINGRP=	kmem
